@@ -39,6 +39,7 @@ All (GUI):
 - Added on-demand image loading option to wxRTC.
 - Add wxFont::GetBaseFont() (Melroy Tellis).
 - Update included Scintilla to version 3.3.9 (Christian Walther).
+- Add support for loading old V1 BMP files to wxImage (Artur Wieczorek).
 
 wxGTK:
 
